--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
 <body>
   hello world!
+
+  <script>
+    var foo = 1;
+
+    function bar() {
+      foo = 10;
+      return;
+
+      function foo() {}
+    }
+    bar();
+    alert(foo);
+  </script>
 </body>
 
 </html>
