--- a/数组去重与斐波那契数列.html
+++ b/数组去重与斐波那契数列.html
@@ -43,6 +43,36 @@
       return prev;
     })
 
+    // 利用for嵌套for，然后splice去重
+    function unique(arr) {
+      for (var i = 0; i < arr.length; i++) {
+        for (var j = i + 1; j < arr.length; j++) {
+          if (arr[i] == arr[j]) { //第一个等同于第二个，splice方法删除第二个
+            arr.splice(j, 1);
+            j--;
+          }
+        }
+      }
+      return arr;
+    }
+
+    // 利用indexOf去重
+    function removal(arr) {
+      if (!Array.isArray(arr)) {
+        return
+      }
+
+      var array = []
+      for (var i = 0; i < arr.length; i++) {
+        if (array.indexOf(arr[i]) === -1) {
+          array.push(arr[i])
+        }
+      }
+      return array
+    }
+
+    
+
 
     // .一个页面从输入 URL 到页面加载显示完成，这个过程中都发生了什么？（流程说的越详细越好）
     // 浏览器根据请求的URL交给DNS域名解析，找到真实IP，向服务器发起请求；
